@@ -26,8 +26,8 @@ protected:
 	bool attackrun;		// true when running full speed shortly before the attack
 	bool evasive_manouver;	// true when set_course tries an alternative route
 	double rem_manouver_time; // remaining time that ai should wait for during an evasive manouver
-	sea_object::ref parent;	// fixme: is a ship!
-	sea_object::ref followme; // fixme: is a ship!
+	sea_object* parent;	// fixme: is a ship!
+	sea_object* followme; // fixme: is a ship!
 	class convoy* myconvoy;	// convoy to which parent belongs (if any)
 	bool has_contact;
 	vector3 contact;	// position of target to attack
@@ -50,7 +50,7 @@ protected:
 
 public:
 	ai::ai(sea_object* parent_, types type_);
-	virtual ~ai() {};
+	virtual ~ai();
 
 	ai(istream& in, class game& g);	// attention: all sea_objects must exist BEFORE this is called!
 	void save(ostream& out, const class game& g) const;
